--- a/style.css
+++ b/style.css
@@ -95,6 +95,10 @@ html {
     margin-bottom: 1vw;
 }
 
+#page-bottom > img {
+    width: 100%;
+}
+
 /* -- -- -- CSS for big screns -- -- -- */
 
 @media screen and (min-width: 768px ){
